<!-- -*- Mode: markdown -*- -->

<!-- Please add new release notes to the newsfragments directory (read the README.md file there).
     The release notes will be collected at release time and put into this document
     semi-automatically.
-->

## New with 1.0.32 (released 2021-02-14)

### Backends

- all backends now respect the `local_only` parameter when `true` is
  passed to `sane_get_devices()` in that they do not actively go out
  looking for networked devices (!502)
- `artec_eplus48u`: fixes configuration for AstraSlim SE (!545)
- `avision`: adds the AV186+ and AV188 as supported (!532)
- `avision`: fixes doubled height issue (#402)
- `avision`: fixes a debug message and compiler warning (!515)
- `canon_dr`: adds support for the DR-C120 and DR-C130 (#175)
- `canon_dr`: adds support for uploading of fine calibration uploads
- `canon_dr`: enables fine calibration for the P-208
- `canon_dr`: improves DR-C225 support (#431)
- `canon_lide70`: adds support for document scanning on the Canon LiDE
  600(F), thanks to a hardware donation by Georg Sauthoff
- `dll`: fixes a memory leak (!537)
- `epson2`: adds support for the ET-2600 (#395)
- `epson2`: adds autofocus support for devices that support it (!531)
- `epson2`: fixes brightness support for DS-G20000/12000XL (!529)
- `epson2`: fixes an unchecked return value issue (!526)
- `escl`: adds support for brightness, threshold, sharpen and contrast
  options (!527, !528)
- `escl`: adds support for LaserJet FLowMFP M578 and MFP M630 (#424)
- `escl`: adds support for DeskJet 2710, 2723 (!519) and 3760 (!554)
- `escl`: adds support for the PIXMA TS-5351 (!544) and MG5765 (!517)
- `escl`: adds support for the Brother HL-L258DW (!517)
- `escl`: fixes Avahi device discovery (!536)
- `escl`: fixes crashes for devices without a flatbed (!554)
- `escl`: fixes segfaults in option handling (!557)
- `escl`: fixes sleep mode (!577)
- `escl`: fixes builds without libpoppler-glib-dev (#422)